--- a/database_queries.ipynb
+++ b/database_queries.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "import pymongo\n",
     "from pymongo import MongoClient\n",
-    "import datetime"
+    "# import datetime"
    ]
   },
   {
